Impress: Fix #presentation-toolbar on chrome
- Make sure width doesn't get above the available space
- Do not force scrollbar when there is no content to scroll
  - use visible (default): implicitly compute to auto

--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -167,7 +167,7 @@ body {
 	top: 77px;
 	left: 0px;
 	bottom: 33px;
-	max-width: 218px;
+	max-width: 194px;
 	border-top: 1px solid var(--gray-color);
 	display: block;
 }
